tests/baselines/reference/castingTuple.errors.txt
tests/cases/conformance/types/tuple/castingTuple.ts(28,10): error TS2352: Type '[number, string]' cannot be converted to type '[number, number]'.
  Type 'string' is not comparable to type 'number'.
tests/cases/conformance/types/tuple/castingTuple.ts(29,10): error TS2352: Type '[C, D]' cannot be converted to type '[A, I]'.
  Type 'C' is not comparable to type 'A'.
    Property 'a' is missing in type 'C'.
tests/cases/conformance/types/tuple/castingTuple.ts(30,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'array1' must be of type '{}[]', but here has type 'number[]'.
tests/cases/conformance/types/tuple/castingTuple.ts(31,1): error TS2304: Cannot find name 't4'.


==== tests/cases/conformance/types/tuple/castingTuple.ts (4 errors) ====
    interface I { }
    class A { a = 10; }
    class C implements I { c };
    class D implements I { d };
    class E extends A { e };
    class F extends A { f };
    enum E1 { one }
    enum E2 { one }
    
    // no error
    var numStrTuple: [number, string] = [5, "foo"];
    var emptyObjTuple = <[{}, {}]>numStrTuple;
    var numStrBoolTuple = <[number, string, boolean]>numStrTuple;
    var classCDTuple: [C, D] = [new C(), new D()];
    var interfaceIITuple = <[I, I]>classCDTuple;
    var classCDATuple = <[C, D, A]>classCDTuple;
    var eleFromCDA1 = classCDATuple[2]; // A
    var eleFromCDA2 = classCDATuple[5]; // C | D | A
    var t10: [E1, E2] = [E1.one, E2.one];
    var t11 = <[number, number]>t10;
    var array1 = <{}[]>emptyObjTuple;
    var unionTuple: [C, string | number] = [new C(), "foo"];
    var unionTuple2: [C, string | number, D] = [new C(), "foo", new D()];
    var unionTuple3: [number, string| number] = [10, "foo"]; 
    var unionTuple4 = <[number, number]>unionTuple3; 
    
    // error
    var t3 = <[number, number]>numStrTuple;
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '[number, string]' cannot be converted to type '[number, number]'.
!!! error TS2352:   Type 'string' is not comparable to type 'number'.
    var t9 = <[A, I]>classCDTuple;
             ~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '[C, D]' cannot be converted to type '[A, I]'.
!!! error TS2352:   Type 'C' is not comparable to type 'A'.
!!! error TS2352:     Property 'a' is missing in type 'C'.
    var array1 = <number[]>numStrTuple;
        ~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'array1' must be of type '{}[]', but here has type 'number[]'.
    t4[2] = 10;
    ~~
!!! error TS2304: Cannot find name 't4'.
    